--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ body{
     top: 0;
     z-index: 9999;
 }
+
+.like:hover, .dislike:hover {
+	cursor: pointer;
+}
+
 .b-head-decor{display:none}
 .b-page_newyear .b-head-decor{
    position:absolute;
@@ -126,3 +131,39 @@ pointer-events:none
 .b-ball_bounce .b-ball__right.bounce2+.b-ball__i{-webkit-transform:rotate(3deg);-moz-transform:rotate(3deg);-o-transform:rotate(3deg);transform:rotate(3deg)}
 .b-ball_bounce.bounce3>.b-ball__i{-webkit-transform:rotate(1.5deg);-moz-transform:rotate(1.5deg);-o-transform:rotate(1.5deg);transform:rotate(1.5deg)}
 .b-ball_bounce .b-ball__right.bounce3+.b-ball__i{-webkit-transform:rotate(-1.5deg);-moz-transform:rotate(-1.5deg);-o-transform:rotate(-1.5deg);transform:rotate(-1.5deg)}
+
+.hover-letter {
+	position: relative;
+	text-align: center;
+}
+.hover-letter span {
+	color: #337AB7;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 44px;
+	line-height: 56px;
+	font-weight: bold;
+	transition: all 0.3s ease-in-out;
+	text-shadow: 0 0 4px rgba(0,0,0, 0.2);
+	position: relative;
+	text-transform: uppercase;
+	top: 0px;
+	left: 0px;
+	cursor: default;
+	z-index: 1;
+}
+.hover-letter span:hover {
+	text-shadow: -8px 8px 0 rgba(0,0,0, 0.2);
+	color: #000;
+	top: -8px;
+	left: 8px;
+	z-index: 2;
+}
+.hover-letter span.space {
+	width: 14px;
+}
+@media screen and (max-width: 767px) {
+	.hover-letter span {
+		font-size: 28px;
+		line-height: 32px;
+	}
+}
